feat: port main capabilities to clean architecture